--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.15.0",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "x-xss-protection": "^1.3.0"
   }
 }
